Fix gallery data for local dev, align right nav properly

--- a/src/components/nav-buttons/RightNav.css
+++ b/src/components/nav-buttons/RightNav.css
@@ -3,6 +3,7 @@
     width: 24px;
     padding: 0;
     filter: none;
+    top: 0;
     transform: translateX(14px) translateY(100%);
     position: fixed;
     background-color: rgba(255, 255, 255, 0);
